# data-compression

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  buddy.yml
benchmarks/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  dynamic_huffman_example.cpp  huffman_example.cpp  lz77_example.cpp
example/details/: example_class.cpp  example_class.hpp
include/: bitset.hpp  huffman.hpp  lz77.hpp  trees.hpp  utils.hpp
src/: CMakeLists.txt  dynamic_huffman_decode.cpp  dynamic_huffman_encode.cpp  huffman.cpp  huffman_decode.cpp  huffman_encode.cpp  lz77_decode.cpp  lz77_encode.cpp
tests/: CMakeLists.txt  bitset_tests.cpp  dynamic_huffman_tests.cpp  huffman_tests.cpp  lz77_tests.cpp
tests/details/: constants.hpp
